public/pages/blog/blogs.css
@import "/public/styles/global.css";
@import "/public/styles/index.css";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
nav {
  background-color: transparent;
}
body {
  background-image: url("/public/assets/bg-1.svg");
  background-size: cover;
}
.blogs-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}
.blogs-card {
  background-color: #dae7f583;
  display: flex;
  width: 90%;
  flex-direction: row;
  flex-wrap: nowrap;
  margin-bottom: 2rem;
  border-radius: 20px;
  box-shadow: 3px 4px 20px #2b2b2b67;
}

.image-container {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.image-container img {
  width: 90%;
  height: 90%;
  padding: 1rem;
  border-radius: 30px;
  transition: 500ms;
}
.blog-details {
  width: 50%;
  display: flex;
  flex-direction: column;
  padding: 2rem;
  align-items: center;
}
.blog-details h1 {
  font-size: 1.5rem;
}
.l-screen {
  font-size: 1.2rem;
  padding: 1rem;
  text-align: justify;
}
.s-screen {
  display: none;
}
.read_more {
  text-decoration: none;
  color: #ffdfff;
  font-size: 1.1rem;
  transition: 500ms;
  background-color: #0059ff;
  padding: 0.8rem;
  border-radius: 15px;
}
.read_more:hover {
  font-size: 1.2rem;
  transition: ease 500ms;
}
.image-container img:hover {
  filter: brightness(0.6);
  opacity: 0.8;
  transition: all 500ms;
}

@media screen and (max-width: 850px) {
  .blogs-container {
    padding: 1rem;
  }
  .blogs-card {
    flex-direction: column;
    width: 100%;
  }
  .blog-details,
  .image-container {
    width: 100%;
    padding: 1rem;
  }
  .blog-details h1 {
    font-size: 1.4rem;
  }
  .image-container img {
    width: 100%;
  }
  .l-screen {
    display: none;
  }
  .s-screen {
    display: inline-block;
    text-align: justify;
    font-size: 1rem;
    padding: 1rem;
  }
}

